--- a/app/src/main/res/layout/activity_scan_voice_code_batch.xml
+++ b/app/src/main/res/layout/activity_scan_voice_code_batch.xml
@@ -5,10 +5,43 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#353639"
-    tools:context="com.vaiotech.attendaceapp.QRCodeGeneratorActivity">
+    tools:context="com.vaiotech.attendaceapp.ScanVoiceCodeBatchActivity">
 
     <TextView
-        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="0dp"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Admin Name : "
+        android:id="@+id/adminNameLableTV"
+        android:layout_alignParentTop="true"
+        />
+
+    <TextView
+        android:textSize="20sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="----------------"
+        android:id="@+id/adminValueLableTV"
+        android:layout_toRightOf="@+id/adminNameLableTV"
+        android:layout_below="@+id/idLableTV"
+        android:layout_alignParentTop="true"
+        />
+
+
+    <View
+        android:layout_below="@+id/adminNameLableTV"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:id="@+id/firstHLine"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:background="#080807"/>
+
+    <TextView
         android:textSize="30sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
@@ -20,8 +53,7 @@
         android:layout_marginRight="15dp"
         />
 
-    <TextView
-        android:layout_marginTop="10dp"
+    <EditText
         android:inputType="number"
         android:textStyle="bold"
         android:textSize="30sp"
@@ -38,7 +70,6 @@
         />
 
     <TextView
-        android:layout_marginTop="10dp"
         android:textSize="30sp"
         android:textColor="#080807"
         android:layout_marginLeft="5dp"
@@ -51,8 +82,7 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold" />
 
-    <TextView
-        android:layout_marginTop="10dp"
+    <EditText
         android:inputType="number"
         android:textStyle="bold"
         android:textSize="30sp"
@@ -81,7 +111,7 @@
         android:layout_marginRight="15dp"
         />
 
-    <TextView
+    <EditText
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
@@ -112,7 +142,7 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold" />
 
-    <TextView
+    <EditText
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
@@ -143,7 +173,7 @@
         android:layout_toRightOf="@+id/MMET"
         android:textStyle="bold" />
 
-    <TextView
+    <EditText
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
@@ -160,26 +190,84 @@
         android:layout_toRightOf="@+id/seperateDateMMTV"
         />
 
-    <ImageView
-        android:layout_margin="20dp"
+    <TextView
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        android:text="0"
+        android:textSize="100sp"
+        android:gravity="center"
+        android:textColor="#E81B11"
+        android:background="#080807"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/counterValTV"
         android:layout_below="@+id/dateTV"
+        android:layout_centerHorizontal="true"
+        />
+
+    <TextView
+        android:layout_marginTop="70dp"
+        android:text="Count"
+        android:textSize="25sp"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/counterLableTV"
+        android:layout_toLeftOf="@+id/counterValTV"
+        android:layout_below="@+id/dateTV"
+        android:layout_marginRight="20dp"
+        />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:background="@xml/progress_bar"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        />
+
+    <View
+        android:layout_above="@+id/inBUTTON"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/qrCodeimageView"
-        android:layout_above="@+id/refreshButton"
+        android:layout_height="1dp"
+        android:id="@+id/secondHLine"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="5dp"
+        android:background="#000000"/>
+
+    <Button
+        android:layout_alignParentStart="true"
+        android:layout_margin="20dp"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
+        android:background="@drawable/apptheme_btn_in_time_holo_light"
+        android:width="110dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="In Time"
+        android:onClick="save"
+        android:id="@+id/inBUTTON"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         />
 
     <Button
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
         android:background="@drawable/apptheme_btn_out_time_holo_light"
-        android:width="100dp"
-        android:layout_width="fill_parent"
+        android:width="110dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Generate"
-        android:onClick="refresh"
-        android:id="@+id/refreshButton"
+        android:text="Out Time"
+        android:onClick="save"
+        android:id="@+id/outBUTTON"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-     />
+        />
 </RelativeLayout>
