--- a/app/src/main/res/layout/activity_scan_qrcode_batch.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode_batch.xml
@@ -180,7 +180,8 @@
         android:textSize="30sp"
         android:maxLength="2"
         android:gravity="center"
-        android:width="40dp"
+        android:width="80dp"
+        android:enabled="false"
         android:textColor="#E81B11"
         android:background="#080807"
         android:layout_width="wrap_content"
