--- a/app/src/main/res/layout/activity_view_user_report.xml
+++ b/app/src/main/res/layout/activity_view_user_report.xml
@@ -4,6 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#1C5EBB"
     tools:context="com.vaiotech.attendaceapp.ViewUserReportActivity">
+
+    <FrameLayout
+        android:id="@+id/fraContainer"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+    />
 
 </RelativeLayout>
