--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,20 @@
 
 
     <TextView
+        android:layout_marginTop="30dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/errorTV"
+        android:textSize="22sp"
+        android:textColor="#A02E2B"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:gravity="center"
+        />
+
+    <TextView
         android:textSize="20sp"
         android:textColor="#000000"
         android:layout_margin="10dp"
@@ -85,5 +99,7 @@
         android:id="@+id/loginBUTTON"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+
 
 </RelativeLayout>
