--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
 
     <TextView
         android:textSize="20sp"
-        android:textColor="#000000"
+        android:textColor="#43464b"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,11 +36,11 @@
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:layout_margin="10dp"
         android:textColor="#C5DBF1"
-        android:background="#000000"
-        android:layout_width="wrap_content"
+        android:background="#43464b"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/loginIDET"
         android:text="admin"
@@ -53,7 +53,7 @@
 
     <TextView
         android:textSize="20sp"
-        android:textColor="#000000"
+        android:textColor="#43464b"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,11 +63,11 @@
         />
 
     <EditText
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:layout_margin="10dp"
         android:textColor="#C5DBF1"
-        android:background="#000000"
-        android:layout_width="wrap_content"
+        android:background="#43464b"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/passwordET"
         android:inputType="textPassword"
@@ -87,14 +87,17 @@
         android:background="#000000"/>
 
     <Button
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
         android:onClick="login"
         android:layout_marginBottom="30dp"
         android:textSize="20sp"
         android:textColor="#C5DBF1"
-        android:background="#000000"
-        android:width="150dp"
-        android:layout_width="wrap_content"
+        android:background="@drawable/apptheme_btn_scan_selection_holo_light"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:text="Login"
         android:id="@+id/loginBUTTON"
         android:layout_alignParentBottom="true"
