--- a/app/src/main/res/layout/activity_scan_qrcode_single.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode_single.xml
@@ -38,8 +38,8 @@
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:id="@+id/firstHLine"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:background="#080807"/>
 
     <TextView
@@ -200,9 +200,41 @@
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Event "
+        android:id="@+id/eventId"
+        android:layout_above="@+id/idLableTV"
+        />
+
+    <TextView
+        android:textSize="19sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" : "
+        android:id="@+id/eventIdColonTV"
+        android:layout_above="@+id/idLableTV"
+        android:layout_toRightOf="@+id/userNameLableTV" />
+
+    <Spinner
+        android:background="#000000"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/eventSpinner"
+        android:layout_above="@+id/idColonTV"
+        android:layout_toRightOf="@+id/eventIdColonTV"
+        android:layout_toEndOf="@+id/eventIdColonTV" />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="0dp"
+        android:textSize="19sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="ID "
         android:id="@+id/idLableTV"
-        android:layout_below="@+id/seperateDateMMTV"
+        android:layout_above="@+id/userNameValueTV"
         />
 
     <TextView
@@ -223,10 +255,10 @@
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="-"
         android:id="@+id/idValueTV"
         android:layout_toRightOf="@+id/idColonTV"
-        android:layout_below="@+id/seperateDateMMTV"
+        android:layout_above="@+id/userNameValueTV"
         />
 
     <TextView
@@ -239,7 +271,7 @@
         android:layout_height="wrap_content"
         android:text="Name"
         android:id="@+id/userNameLableTV"
-        android:layout_below="@+id/idLableTV"
+        android:layout_above="@+id/secHLine"
         />
 
     <TextView
@@ -260,11 +292,11 @@
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="-"
         android:id="@+id/userNameValueTV"
         android:layout_toRightOf="@+id/userNameColonTV"
         android:layout_toEndOf="@+id/userNameColonTV"
-        android:layout_below="@+id/idLableTV"
+        android:layout_above="@+id/secHLine"
         />
 
     <ProgressBar
@@ -283,8 +315,8 @@
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:id="@+id/secHLine"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:background="#080807"/>
 
 
@@ -305,7 +337,7 @@
 
     <Button
         android:layout_alignParentStart="true"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
         android:background="@drawable/apptheme_btn_in_time_holo_light"
@@ -320,7 +352,7 @@
         />
 
     <Button
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
         android:background="@drawable/apptheme_btn_out_time_holo_light"
@@ -334,5 +366,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         />
+
 
 </RelativeLayout>
