--- a/app/src/main/res/layout/activity_view_user_report.xml
+++ b/app/src/main/res/layout/activity_view_user_report.xml
@@ -7,10 +7,50 @@
     android:background="#1C5EBB"
     tools:context="com.vaiotech.attendaceapp.ViewUserReportActivity">
 
-    <FrameLayout
-        android:id="@+id/fraContainer"
+    <LinearLayout
+        android:layout_margin="15dp"
+        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-    />
+        android:layout_height="fill_parent">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="20sp"
+                android:textColor="#ffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Activity"
+                android:id="@+id/activityTV"
+                />
+            <TextView
+                android:textSize="20sp"
+                android:textColor="#ffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" : "
+                android:id="@+id/activityColonTV"
+                />
+            <Spinner
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/activitySpinner"
+                >
+            </Spinner>
+        </LinearLayout>
+
+        <LinearLayout
+            android:paddingTop="20dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <FrameLayout
+                android:id="@+id/fraContainer"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+            />
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
