--- a/app/src/main/res/values-w820dp/styles.xml
+++ b/app/src/main/res/values-w820dp/styles.xml
@@ -1,13 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light">
+    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <item name="android:buttonStyle">@style/ButtonAppTheme</item>
-    </style>
-
-
-    <style name="MyApp.NumberPicker" parent="android:Widget.DatePicker">
-        <item name="android:divider">@color/border_color</item>
+        <item name="android:actionBarStyle">@style/ActionBarIPS</item>
     </style>
 
     <style name="RadioButtonAppTheme" parent="android:Widget.CompoundButton.RadioButton">
@@ -19,6 +15,15 @@
         <item name="android:minHeight">48dip</item>
         <item name="android:minWidth">64dip</item>
         <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="IndeterminateProgress" parent="@android:style/Widget.ProgressBar.Small">
+        <item name="android:indeterminateDrawable">@drawable/pro_bar</item>
+    </style>
+
+    <style name="ActionBarIPS" parent="@android:style/Widget.ActionBar">
+        <item name="android:indeterminateProgressStyle">@style/IndeterminateProgress</item>
+        <item name="android:background">#FFF982</item>
     </style>
 
 </resources>
