--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light">
         <item name="android:buttonStyle">@style/ButtonAppTheme</item>
+        <item name="android:actionBarStyle">@style/ActionBarIPS</item>
     </style>
 
 
@@ -19,6 +20,15 @@
         <item name="android:minHeight">48dip</item>
         <item name="android:minWidth">64dip</item>
         <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="IndeterminateProgress" parent="@android:style/Widget.ProgressBar.Small">
+        <item name="android:indeterminateDrawable">@drawable/pro_bar</item>
+    </style>
+
+    <style name="ActionBarIPS" parent="@android:style/Widget.ActionBar">
+        <item name="android:indeterminateProgressStyle">@style/IndeterminateProgress</item>
+        <item name="android:background">#739AC5</item>
     </style>
 
 </resources>
