--- a/app/src/main/res/layout/spinner_text.xml
+++ b/app/src/main/res/layout/spinner_text.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="20sp"
+    android:text="testing"
     android:gravity="left"
-    android:textColor="#FFFFFF"
-    android:padding="5dip"
-    android:background="#000000"
+    android:textColor="#000000"
+    android:padding="1dip"
     />
