--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -90,7 +90,7 @@
                     android:gravity="center"
                     android:background="#FFFFFF"
                     android:text="0"
-                    android:layout_height="wrap_content"
+                    android:layout_height="fill_parent"
                     android:layout_width="0dp"
                     android:textSize="30sp"
                     android:textColor="#E81B11"
@@ -145,7 +145,7 @@
                     android:background="#FFFFFF"
                     android:text="0"
                     android:gravity="center"
-                    android:layout_height="wrap_content"
+                    android:layout_height="fill_parent"
                     android:layout_weight="0.5"
                     android:layout_width="0dp"
                     android:textSize="30sp"
