--- a/app/src/main/res/layout/activity_scan_voice_code_single.xml
+++ b/app/src/main/res/layout/activity_scan_voice_code_single.xml
@@ -77,7 +77,7 @@
             >
             <TextView
                 android:gravity="center"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textColor="#ffffff"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -140,7 +140,7 @@
             android:layout_height="0dp"
             >
             <TextView
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textColor="#ffffff"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -230,7 +230,7 @@
             android:gravity="center"
             android:layout_marginTop="10dp"
             android:layout_width="fill_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.3"
             android:layout_height="0dp"
             >
             <TextView
@@ -263,36 +263,47 @@
             android:layout_weight="1"
             android:layout_height="0dp"
             >
-            <TextView
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ID"
-                android:id="@+id/idLableTV"
-                />
+            <LinearLayout
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_weight="2"
+                android:layout_height="match_parent"
+            >
+                    <TextView
+                        android:layout_weight="0.4"
+                        android:textSize="20sp"
+                        android:textColor="#ffffff"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="ID"
+                        android:id="@+id/idLableTV"
+                        />
 
-            <TextView
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" : "
-                android:id="@+id/idColonTV"
-                />
+                    <TextView
+                        android:layout_weight="0.1"
+                        android:textSize="20sp"
+                        android:textColor="#ffffff"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text=":"
+                        android:id="@+id/idColonTV"
+                        />
 
 
-            <TextView
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="------"
-                android:id="@+id/idValueTV"
-                android:layout_toRightOf="@+id/idColonTV"
-                android:layout_toEndOf="@+id/idColonTV"
-                android:layout_below="@+id/seperateDateMMTV"
-                />
+                    <TextView
+                        android:layout_weight="1.5"
+                        android:textSize="20sp"
+                        android:textColor="#ffffff"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="------"
+                        android:id="@+id/idValueTV"
+                        android:layout_toRightOf="@+id/idColonTV"
+                        android:layout_toEndOf="@+id/idColonTV"
+                        android:layout_below="@+id/seperateDateMMTV"
+                        />
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:gravity="center"
@@ -301,33 +312,43 @@
             android:layout_weight="1"
             android:layout_height="0dp"
             >
-            <TextView
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Name"
-                android:id="@+id/userNameLableTV"
-                />
+            <LinearLayout
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_weight="2"
+                android:layout_height="match_parent"
+            >
+                    <TextView
+                        android:layout_weight="0.4"
+                        android:textSize="20sp"
+                        android:textColor="#ffffff"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Name"
+                        android:id="@+id/userNameLableTV"
+                        />
 
-            <TextView
+                    <TextView
+                        android:layout_weight="0.1"
+                        android:textSize="20sp"
+                        android:textColor="#ffffff"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text=":"
+                        android:id="@+id/userNameColonTV"
+                        />
 
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" : "
-                android:id="@+id/userNameColonTV"
-                />
-
-            <TextView
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="------"
-                android:id="@+id/userNameValueTV"
-                />
+                    <TextView
+                        android:layout_weight="1.5"
+                        android:textSize="20sp"
+                        android:textColor="#ffffff"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="------"
+                        android:id="@+id/userNameValueTV"
+                        />
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:gravity="center"
@@ -385,7 +406,7 @@
         <LinearLayout
             android:layout_marginTop="10dp"
             android:layout_width="fill_parent"
-            android:layout_weight="2"
+            android:layout_weight="1.7"
             android:layout_height="0dp"
             android:weightSum="2"
             android:orientation="horizontal"
