--- a/app/src/main/res/layout/activity_view_user_report.xml
+++ b/app/src/main/res/layout/activity_view_user_report.xml
@@ -17,6 +17,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:textSize="20sp"
                 android:textColor="#ffffff"
                 android:layout_width="wrap_content"
@@ -25,6 +27,7 @@
                 android:id="@+id/activityTV"
                 />
             <TextView
+                android:layout_gravity="center"
                 android:textSize="20sp"
                 android:textColor="#ffffff"
                 android:layout_width="wrap_content"
