--- a/app/src/main/res/menu/scan_card_single.xml
+++ b/app/src/main/res/menu/scan_card_single.xml
@@ -1,5 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
     tools:context="com.vaiotech.attendaceapp.ScanCardSingleActivity" >
 
     <item android:id="@+id/logout"
