--- a/app/src/main/res/menu/scan_qrcode.xml
+++ b/app/src/main/res/menu/scan_qrcode.xml
@@ -1,4 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.vaiotech.attendaceapp.ScanQRCodeActivity" >
+    <item android:id="@+id/logout"
+        android:title=""
+        android:showAsAction="always"
+        />
 </menu>
