--- a/app/src/main/res/menu/menu_functional_main.xml
+++ b/app/src/main/res/menu/menu_functional_main.xml
@@ -4,6 +4,7 @@
     tools:context="com.vaiotech.attendaceapp.FunctionalMainActivity">
 
         <item android:id="@+id/logout"
+            android:icon="@drawable/login"
             android:title=""
             android:showAsAction="always"
          />
