--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
         <item name="android:textColor">#000000</item>
     </style>
 
-    <style name="IndeterminateProgress" parent="@android:style/Widget.ProgressBar.Small">
+    <style name="IndeterminateProgress" parent="@android:style/Widget.ProgressBar">
         <item name="android:indeterminateDrawable">@drawable/pro_bar</item>
     </style>
 
