--- a/app/src/main/res/layout/activity_about_ipresence.xml
+++ b/app/src/main/res/layout/activity_about_ipresence.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:src="@drawable/ipresence_logo"
+        android:src="@drawable/logo"
         android:layout_centerInParent="true"
         />
 
@@ -43,6 +43,7 @@
 
          <TextView
              android:paddingLeft="20dp"
+             android:paddingRight="0dp"
              android:paddingTop="5dp"
              android:textColor="#ffffff"
              android:layout_below="@+id/aboutiPresenceTV"
@@ -54,6 +55,7 @@
 
         <TextView
             android:paddingLeft="20dp"
+            android:paddingRight="0dp"
             android:paddingTop="5dp"
             android:textColor="#ffffff"
             android:layout_below="@+id/ipresenceOne"
@@ -65,6 +67,7 @@
 
         <TextView
             android:paddingLeft="20dp"
+            android:paddingRight="0dp"
             android:paddingTop="5dp"
             android:textColor="#ffffff"
             android:layout_below="@+id/ipresenceTwo"
@@ -76,6 +79,7 @@
 
         <TextView
             android:paddingLeft="20dp"
+            android:paddingRight="0dp"
             android:paddingTop="5dp"
             android:textColor="#ffffff"
             android:layout_below="@+id/ipresenceThree"
@@ -87,6 +91,7 @@
 
         <TextView
             android:paddingLeft="20dp"
+            android:paddingRight="0dp"
             android:paddingTop="5dp"
             android:textColor="#ffffff"
             android:layout_below="@+id/ipresenceFour"
