--- a/app/src/main/res/layout/activity_scan_voice_code_single.xml
+++ b/app/src/main/res/layout/activity_scan_voice_code_single.xml
@@ -385,7 +385,7 @@
             android:gravity="center"
             android:layout_marginTop="10dp"
             android:layout_width="fill_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.3"
             android:layout_height="0dp"
             >
             <Button
@@ -406,25 +406,23 @@
         <LinearLayout
             android:layout_marginTop="10dp"
             android:layout_width="fill_parent"
-            android:layout_weight="1.7"
+            android:layout_weight="1.4"
             android:layout_height="0dp"
             android:weightSum="2"
             android:orientation="horizontal"
             >
             <LinearLayout
                 android:gravity="center"
-                android:layout_marginTop="5dp"
                 android:layout_width="fill_parent"
                 android:layout_weight="1"
                 android:layout_height="fill_parent"
                 >
                 <Button
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="20sp"
                     android:textColor="#ffffff"
                     android:background="@drawable/apptheme_btn_in_time_holo_light"
-                    android:width="110dp"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:text="In Time"
@@ -434,23 +432,22 @@
             </LinearLayout>
             <LinearLayout
                 android:gravity="center"
-                android:layout_marginTop="5dp"
                 android:layout_width="fill_parent"
                 android:layout_weight="1"
                 android:layout_height="fill_parent"
                 >
                 <Button
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="20sp"
                     android:textColor="#ffffff"
                     android:background="@drawable/apptheme_btn_out_time_holo_light"
-                    android:width="110dp"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:text="Out Time"
                     android:onClick="save"
                     android:id="@+id/outBUTTON"
+                    android:enabled="false"
                     />
             </LinearLayout>
         </LinearLayout>
