--- a/app/src/main/res/layout/activity_voice_code_generator.xml
+++ b/app/src/main/res/layout/activity_voice_code_generator.xml
@@ -19,7 +19,7 @@
         android:layout_marginRight="15dp"
         />
 
-    <TextView
+    <EditText
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
@@ -50,7 +50,7 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold" />
 
-    <TextView
+    <EditText
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
@@ -80,7 +80,7 @@
         android:layout_marginRight="15dp"
         />
 
-    <TextView
+    <EditText
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
@@ -111,7 +111,7 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold" />
 
-    <TextView
+    <EditText
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
@@ -142,7 +142,7 @@
         android:layout_toRightOf="@+id/MMET"
         android:textStyle="bold" />
 
-    <TextView
+    <EditText
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
